--- a/package.json
+++ b/package.json
@@ -12,16 +12,25 @@
     "seed": "node database/seed.js"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.6.0",
     "express": "^4.17.1",
     "faker": "^4.1.0",
+    "lodash": "^4.17.15",
     "mass-db-seed": "^1.2.1",
     "mysql": "^2.17.1",
     "mysql2": "^1.7.0",
     "randomstring": "^1.1.5",
-    "sequelize": "^5.19.6"
+    "sequelize": "^5.19.6",
+    "webpack": "^4.41.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.6.4",
+    "@babel/core": "^7.6.4",
+    "@babel/preset-env": "^7.6.3",
+    "@babel/preset-react": "^7.6.3",
+    "eslint": "^6.5.1",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
-    "nodemon": "^1.19.3"
+    "nodemon": "^1.19.3",
+    "webpack-cli": "^3.3.9"
   }
 }
