--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mysql": "^2.17.1",
     "mysql2": "^1.7.0",
     "randomstring": "^1.1.5",
+    "react-modal": "^3.10.1",
     "sequelize": "^5.19.6"
   },
   "devDependencies": {
