--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.6.0",
     "babel": "^6.23.0",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "faker": "^4.1.0",
     "lodash": "^4.17.15",
@@ -46,7 +47,7 @@
     "eslint-plugin-react-hooks": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
     "nodemon": "^1.19.3",
-    "react": "^16.10.2",
+    "react": "^16.11.0",
     "react-dom": "^16.10.2",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9"
