--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mass-db-seed": "^1.2.1",
     "mysql": "^2.17.1",
     "react": "^16.11.0",
+    "react-accessible-accordion": "^3.0.0",
     "react-dom": "^16.10.2",
     "react-modal": "^3.10.1",
     "react-star-ratings": "^2.3.0",
