--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "faker": "^4.1.0",
+    "jquery": "^3.4.1",
     "lodash": "^4.17.15",
     "mass-db-seed": "^1.2.1",
     "mysql": "^2.17.1",
